--- a/src/style.scss
+++ b/src/style.scss
@@ -31,7 +31,8 @@ body {
   margin-left: 10%;
 }
 .head {
-  width: 100%;
+  width: 80%;
+  margin-left: 10%;
   min-height: 80px;
   font-size: 40px;  
   font-weight: 700;
@@ -48,7 +49,8 @@ body {
 }
 .table {
   display: table;
-  width: 100%;
+  width: 80%;
+  margin-left: 10%;
   min-height: 25px;
   font-family: Calibri, Arial;
   text-shadow: 0 1px black, 0 1px black, 1px 10px 15px grey;
